feature: add products seeders and create a join on the products fin all controllers

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seeder:categories": "node ./src/seeders/categories.seeder.js "
+    "seeder:categories": "node ./src/seeders/categories.seeder.js",
+    "seeder:products": "node ./src/seeders/products.seeder.js",
+    "execute:seeders": "npm run seeder:categories && npm run seeder:products"
   },
   "author": "",
   "license": "ISC",
